src/objects/ParentObject__c.object
<CustomObject>
    <fields>
        <fullName>GrandParentObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GrandParentObject</label>
        <referenceTo>GrandParentObject__c</referenceTo>
        <relationshipLabel>ParentObjects</relationshipLabel>
        <relationshipName>ParentObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <label>ParentObject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ParentObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ParentObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>